Add ability to add to survey

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,11 @@ body
   font-style: italic;
 }
 
+#editorPanel
+{
+  
+}
+
 .surveyRow
 {
 
@@ -29,7 +34,7 @@ body
 
 .surveyResultsButton
 {
-  
+
 }
 
 .surveyHeader
