--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,17 @@ html
 {
   background: linear-gradient(aquamarine, coral);
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body
 {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   font-family: 'Arial Rounded MT Bold', sans-serif;
   font-size: 1em;
   color: oldlace;
@@ -49,6 +56,11 @@ button:active
   box-shadow: 0 2px #666;
   color: white;
   transform: translateY(3px);
+}
+
+button:focus
+{
+  outline: 0;
 }
 
 .surveyRow
