Add visual button press when using keys

--- a/styles/main.css
+++ b/styles/main.css
@@ -174,3 +174,11 @@ button:focus
   color: white;
   transform: translateY(10px);
 }
+
+.answerSelectButton.active
+{
+  background-color: coral;
+  box-shadow: 0 10px #666;
+  color: white;
+  transform: translateY(10px);
+}
