--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@ html
   width: 100%;
   margin: 0;
   padding: 0;
+
 }
 
 body
@@ -129,11 +130,34 @@ button:focus
   padding: 0.5em;
 }
 
-.activeQuestionHeader
+.activeWelcomeMessage
 {
-  margin: 0;
+  width: 100%;
+  text-align: center;
+  margin: auto;
   font-size: 4em;
   color: black;
+  margin-top: 10%;
+}
+
+.activeEndMessage
+{
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  font-size: 4em;
+  color: black;
+  margin-top: 10%;
+}
+
+.activeQuestionHeader
+{
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  font-size: 4em;
+  color: black;
+  margin-top: 10%;
 }
 
 .answerRow
@@ -152,8 +176,20 @@ button:focus
 
 }
 
+.answerPanel
+{
+  width: 60%;
+  margin: auto;
+  margin-top: 10%;
+  display: flex;
+  justify-content: space-between;
+}
+
 .answerSelectButton
 {
+  vertical-align: top;
+
+  text-align: center;
   font-family: 'Arial Rounded MT Bold';
   font-size: 2em;
   color: black;
@@ -163,8 +199,6 @@ button:focus
   box-shadow: 0 20px #999;
   width: 200px;
   height: 200px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .answerSelectButton.active, .answerSelectButton:active
@@ -177,6 +211,9 @@ button:focus
 
 .inactiveAnswerSelectButton
 {
+  vertical-align: top;
+
+  text-align: center;
   font-family: 'Arial Rounded MT Bold';
   font-size: 2em;
   color: black;
@@ -186,8 +223,6 @@ button:focus
   box-shadow: 0 20px #999;
   width: 200px;
   height: 200px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .inactiveAnswerSelectButton.active, .inactiveAnswerSelectButton:active
