--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,23 @@
+@keyframes  moveBackground {
+  0% {background-position:10% 0%}
+  50% {background-position:91% 100%}
+  100% {background-position:10% 0%}
+}
+
 html
 {
-  background: linear-gradient(to bottom left, #e23b3b, #e15a5b);
+  background: linear-gradient(130deg, #e23b3b, #e15a5b, #B75693);
+  background-size: 200% 200%;
+  animation: moveBackground 10s ease infinite;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+}
 
+@font-face {
+    font-family: "arialRounded";
+    src:url("arial-rounded.ttf");
 }
 
 body
@@ -14,7 +26,7 @@ body
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Arial Rounded MT Bold', sans-serif;
+  font-family: 'Arial Rounded MT Bold', arialRounded, sans-serif;
   font-size: 1em;
   color: oldlace;
   background: #00000000;
