--- a/styles/main.css
+++ b/styles/main.css
@@ -17,7 +17,7 @@ html
 
 @font-face {
     font-family: "arialRounded";
-    src:url("arial-rounded.ttf");
+    src: url("../fonts/arial-rounded.ttf") format("truetype");
 }
 
 body
@@ -26,7 +26,7 @@ body
   width: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Arial Rounded MT Bold', arialRounded, sans-serif;
+  font-family: arialRounded;
   font-size: 1em;
   color: oldlace;
   background: #00000000;
@@ -35,7 +35,7 @@ body
 
 input
 {
-  font-family: 'Arial Rounded MT Bold', arialRounded, sans-serif;
+  font-family: arialRounded;
   font-size: 2em;
   color: oldlace;
   background: #00000033;
@@ -53,7 +53,7 @@ input
 
 button
 {
-  font-family: 'Arial Rounded MT Bold', arialRounded, sans-serif;
+  font-family: arialRounded;
   font-size: 1em;
   color: black;
   background: #00000000;
@@ -249,7 +249,7 @@ button:focus
   vertical-align: center;
 
   text-align: center;
-  font-family: 'Arial Rounded MT Bold', arialRounded, sans-serif;
+  font-family: arialRounded;
   font-size: 3vw;
   color: white;
   background-color: coral;
@@ -337,11 +337,11 @@ button:focus
 {
   0%   { transform: scale(1.0); }
   50%   { transform: scale(1.3); }
-  100%  { transform: scale(1.3); }
+  100%  { transform: scale(1.2); }
 }
 
 .grow
 {
-  animation: Grow 0.5s ease-out;
+  animation: Grow 0.5s ease;
   animation-fill-mode: forwards;
 }
