--- a/styles/main.css
+++ b/styles/main.css
@@ -266,6 +266,7 @@ button:focus
   bottom: 25%;
   left: 15%;
   transform: translate(0, 50%);
+  animation: Pulse 3s infinite ease-in-out;
 }
 
 .imagePanel
@@ -369,6 +370,13 @@ button:focus
   0%    { top: 30vh; }
   50%   { top: 32vh; }
   100%  { top: 30vh; }
+}
+
+@keyframes Pulse
+{
+  0%   { transform: scale(1.0); }
+  50%   { transform: scale(1.1); }
+  100%  { transform: scale(1.0); }
 }
 
 @keyframes MoveRightCenter
