--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@ html
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 @font-face {
@@ -25,7 +26,6 @@ body
   height: 100%;
   width: 100%;
   margin: 0;
-  margin-left: 2vw;
   padding: 0;
   font-family: arialRounded;
   font-size: 1em;
@@ -44,9 +44,11 @@ input
 
 #editorPanel
 {
+  overflow: scroll;
   width: 100%;
-  height: 100%;
-  background: #00000000;
+  height: 80%;
+  padding-left: 2vw;
+  padding-bottom: 2vw;
 }
 
 button
@@ -89,6 +91,12 @@ button:focus
   border-radius: 100px;
   border-style: solid;
   padding: 0.25vw;
+}
+
+hr
+{
+  margin-top: 2vw;
+  margin-bottom: 2vw;
 }
 
 .surveyRow
@@ -381,11 +389,12 @@ button:focus
   border-width: 0.5vw;
   border-color: #fff;
   border-style: solid;
-  box-shadow: 0 1vw #00000077;
+  box-shadow: 0 0;
   width: 20vw;
   height: 20vw;
   top: 40%;
   left: 40%;
+  z-index: 1000;
 }
 
 .gameGoal
@@ -417,9 +426,8 @@ button:focus
 .gameButton.active, .gameButton:active
 {
   background-color: coral;
-  box-shadow: 0 0.5vw #00000077;
+  box-shadow: 0 0;
   color: white;
-  transform: translateY(0.5vw);
 }
 
 .gameTimer
